# flowqueue

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_users_and_ownership.py  0003_consumer_autocomplete.py  0004_consumer_match_mode.py  0005_phase5_features.py  0006_feedback.py  0007_queue_timeline_and_webhook_headers.py  0008_outcome_retention.py
app/: __init__.py  cli.py  config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  admin.py  api_keys.py  auth.py  consumers.py  deliveries.py  events.py  feedback.py  messages.py  queues.py  replay.py  stats.py
app/core/: authz.py  exceptions.py  logging.py  routing_engine.py  security.py
app/models/: __init__.py  api_key.py  consumer.py  delivery.py  delivery_log.py  feedback.py  message.py  queue.py  queue_log.py  queue_sequence.py  replay_request.py  user.py
app/schemas/: api_key.py  auth.py  common.py  consumer.py  delivery.py  feedback.py  message.py  queue.py  replay.py
app/sdk/: __init__.py  client.py  consumer.py
app/services/: audit_service.py  auth_service.py  consumer_service.py  delivery_service.py  feedback_service.py  message_service.py  queue_audit_service.py  queue_service.py  replay_service.py  webhook_service.py
app/workers/: delivery_worker.py  replay_worker.py  retention_janitor.py  runner.py  visibility_reclaim.py  webhook_dispatcher.py
nginx/: nginx.conf.template
sdk/: LICENSE  PUBLISHING.md  README.md  pyproject.toml
sdk/flowqueue/: __init__.py  client.py  consumer.py  errors.py  models.py  types.py
sdk/tests/: test_client.py
tests/: test_queue_audit.py  test_retention_outcome.py  test_retry_logic.py  test_routing_engine.py  test_webhook_headers.py  test_webhook_signing.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: JsonView.tsx  Layout.tsx  Logo.tsx  ThemeToggle.tsx
web/src/components/marketing/: CodeBlock.tsx  FanOutDiagram.tsx  FeatureCard.tsx  Footer.tsx  MarketingLayout.tsx  MarketingNav.tsx  ParticleField.tsx  Reveal.tsx  Section.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  confirm-button.tsx  dialog.tsx  input.tsx  label.tsx  pagination.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx
web/src/lib/: api.ts  auth.tsx  theme.tsx  types.ts  useLenis.ts  useRealtime.ts  utils.ts
web/src/pages/: AdminFeedback.tsx  AdminUsers.tsx  ApiKeys.tsx  ConsumerDetail.tsx  Dashboard.tsx  DeliveryDetail.tsx  Login.tsx  Profile.tsx  QueueDetail.tsx  Queues.tsx  Register.tsx  SdkDocs.tsx  Search.tsx
web/src/pages/marketing/: About.tsx  Feedback.tsx  Home.tsx  Pricing.tsx
web/src/pages/marketing/docs/: ApiDocs.tsx  DocsShell.tsx  SdkDocsPublic.tsx
