[project]
name = "flowqueue-server"
version = "0.1.0"
description = "FlowQueue — cloud-native message processing platform (server). The PyPI 'flowqueue' package is the client SDK in ./sdk."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Skill.College" }]
keywords = ["queue", "messaging", "webhook", "delivery", "dlq", "fastapi", "flowqueue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "bcrypt>=4.1",
    "structlog>=24.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.3",
]

[project.urls]
Homepage = "https://github.com/Skill-College/flowqueue"
Repository = "https://github.com/Skill-College/flowqueue"
Documentation = "https://github.com/Skill-College/flowqueue#readme"
Issues = "https://github.com/Skill-College/flowqueue/issues"

[project.scripts]
flowqueue = "app.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
