[project]
name = "flowqueue"
version = "0.2.0"
description = "Async, typed Python runtime client for FlowQueue (publish + consume)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Skill.College" }]
keywords = ["queue", "messaging", "webhook", "delivery", "dlq", "flowqueue"]
dependencies = ["httpx>=0.27"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Skill-College/flowqueue"
Repository = "https://github.com/Skill-College/flowqueue"
Documentation = "https://github.com/Skill-College/flowqueue#readme"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flowqueue*"]

[tool.setuptools.package-data]
flowqueue = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
